play loop add elements

--- a/onRecords01.html
+++ b/onRecords01.html
@@ -6,6 +6,7 @@
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
   </head>
   <body>
+    <pre id="testing">edited ...</pre>
     <pre id="readout">Waiting for data...</pre>
     <script>
         grist.ready();
