--- a/onRecords01.html
+++ b/onRecords01.html
@@ -9,18 +9,23 @@
     <pre id="testing">edited ...</pre>
     <pre id="readout">Waiting for data...</pre>
     <script>
-        grist.ready();
-        grist.onRecords(function(records) {
+        grist.ready({columns: ['ID1', 'Name1', 'ID2', 'Name2'], requiredAccess: 'read table'});
+        grist.onRecords(function(records, mappings) {
             document.getElementById('readout').innerHTML = JSON.stringify(records, null, 2);
 
             document.writeln("<br><br><div align='center'>Here is a HTML output from JSON Array..");
             document.writeln("<br><br><table border='1'>");
             var i = 0;
             for ( var i = 0; i < records.length; i++) {
-                document.writeln("<tr><td>");
-                var obj1 = records[i];
-                document.writeln(obj1);
-                document.writeln("</td></tr>");
+                var record = records[i];
+                const mapped = grist.mapColumnNames(record);
+                if (!mapped) {
+                    return;
+                }
+                document.writeln("<tr>");
+                document.writeln("<td>" + mapped.ID1 + "</td>" + "<td>" + mapped.Name1 + "</td>"
+                    + "<td>" + mapped.ID2 + "</td>" + "<td>" + mapped.Name2 + "</td>");
+                document.writeln("</tr>");
             }
             document.writeln("</table></div>");
         });
