play custom props

--- a/onRecords01.html
+++ b/onRecords01.html
@@ -13,7 +13,7 @@
         grist.onRecords(function(records, mappings) {
             document.getElementById('readout').innerHTML = JSON.stringify(records, null, 2);
 
-            document.writeln("<br><br><div align='center'>Here is a HTML output from JSON Array..");
+            document.writeln("<br><br><div align='center'>loop w  Custom Props");
             document.writeln("<br><br><table border='1'>");
             var i = 0;
             for ( var i = 0; i < records.length; i++) {
