--- a/onRecords01.html
+++ b/onRecords01.html
@@ -9,8 +9,8 @@
     <pre id="testing">edited ...</pre>
     <pre id="readout">Waiting for data...</pre>
     <script>
-        grist.allowSelectBy();
-        grist.ready({columns: ['ID1', 'Name1', 'ID2', 'Name2'], requiredAccess: 'read table'});
+        grist.ready({columns: ['ID1', 'ID2'], requiredAccess: 'read table'});
+        await grist.allowSelectBy();
         grist.onRecords(function(records, mappings) {
             // document.getElementById('readout').innerHTML = JSON.stringify(records, null, 2);
             document.writeln("<br><br><div align='center'>loop w mapped props..");
