--- a/onRecords01.html
+++ b/onRecords01.html
@@ -27,7 +27,7 @@
             }
             document.writeln("</table></div>");
         });
-        await grist.allowSelectBy();
+        // await grist.allowSelectBy();
     </script>
   </body>
 </html> 
