--- a/onRecords01.html
+++ b/onRecords01.html
@@ -8,24 +8,25 @@
   <body>
     <!-- <pre id="testing">edited ...</pre> -->
     <!-- <pre id="readout">Waiting for data...</pre> -->
-    <script>
+    <div id="main"></div>
+<script>
         grist.ready({columns: ['ID1', 'ID2'], requiredAccess: 'read table'});
         grist.onRecords(function(records, mappings) {
-            const mapped = grist.mapColumnNames(records);
-            if (!mapped) {
-                return;
-            }
             // document.getElementById('readout').innerHTML = JSON.stringify(records, null, 2);
-            document.writeln("<br><br><div align='center'>loop w mapped props..");
-            document.writeln("<br><br><table border='1'>");
-            var i = 0;
+            var str1 = "<br><br><div align='center'>loop w mapped props..";
+            str1 += "<br><br><table border='1'>";
             for ( var i = 0; i < records.length; i++) {
                 var record = records[i];
-                document.writeln("<tr>");
-                document.writeln("<td>" + mapped.ID1 + "</td>" + "<td>" + mapped.ID2 + "</td>");
-                document.writeln("</tr>");
+                const mapped = grist.mapColumnNames(record);
+                if (!mapped) {
+                    return;
+                }
+                str1 += "<tr>";
+                str1 += "<td>" + mapped.ID1 + "</td>" + "<td>" + mapped.ID2 + "</td>";
+                str1 += "</tr>";
             }
-            document.writeln("</table></div>");
+            str1 += "</table></div>";
+            document.getElementById('main').innerHTML = str1; 
         });
         // await grist.allowSelectBy();
     </script>
