--- a/onRecords01.html
+++ b/onRecords01.html
@@ -13,7 +13,7 @@
         grist.ready({columns: ['ID1', 'ID2'], requiredAccess: 'read table'});
         grist.onRecords(function(records, mappings) {
             // document.getElementById('readout').innerHTML = JSON.stringify(records, null, 2);
-            var str1 = "<br><br><div align='center'>loop w mapped props..";
+            var str1 = "<br><br><div align='center'>testing..";
             str1 += "<br><br><table border='1'>";
             for ( var i = 0; i < records.length; i++) {
                 var record = records[i];
