--- a/onRecords01.html
+++ b/onRecords01.html
@@ -10,8 +10,9 @@
     <!-- <pre id="readout">Waiting for data...</pre> -->
     <div id="main"></div>
 <script>
-        await grist.GristView.allowSelectBy();
-        grist.ready({columns: ['ID1', 'ID2'], requiredAccess: 'read table'});
+        window.onerror = (message) => alert(String(message));
+        // await grist.GristView.allowSelectBy();
+        grist.ready({allowSelectBy(){}, columns: ['ID1', 'ID2'], requiredAccess: 'read table'});
         grist.onRecords(function(records, mappings) {
             // document.getElementById('readout').innerHTML = JSON.stringify(records, null, 2);
             var str1 = "<br><br><div align='center'>testing..";
