--- a/onRecords01.html
+++ b/onRecords01.html
@@ -12,7 +12,7 @@
 <script>
         window.onerror = (message) => alert(String(message));
         // await grist.GristView.allowSelectBy();
-        grist.ready({allowSelectBy(){}, columns: ['ID1', 'ID2'], requiredAccess: 'read table'});
+        grist.ready({columns: ['ID1', 'ID2'], requiredAccess: 'read table'});
         grist.onRecords(function(records, mappings) {
             // document.getElementById('readout').innerHTML = JSON.stringify(records, null, 2);
             var str1 = "<br><br><div align='center'>testing..";
