--- a/onRecords01.html
+++ b/onRecords01.html
@@ -24,7 +24,7 @@
                     return;
                 }
                 str1 += "<tr>";
-                str1 += "<td> ${mapped.ID1} </td><td> ${mapped.ID2} </td>";
+                str1 += `<td> ${mapped.ID1} </td><td> ${mapped.ID2} </td>`;
                 str1 += "</tr>";
             }
             str1 += "</table></div>";
