--- a/onRecords01.html
+++ b/onRecords01.html
@@ -14,6 +14,7 @@
         window.onerror = (message) => alert(String(message));
         ready(async () => {
             await grist.viewApi.allowSelectBy();
+            console.log("we here");
         });
         grist.ready({columns: ['ID1', 'ID2'], requiredAccess: 'read table'});
         grist.onRecords(function(records, mappings) {
