treenav.html page.js based off calendar widget

--- a/onRecords01.html
+++ b/onRecords01.html
@@ -13,7 +13,7 @@
     <script>
         window.onerror = (message) => alert(String(message));
         /*
-        ready(async () => {
+        function ready(async () => {
             await grist.viewApi.allowSelectBy();
             console.log("we here");
         });
