--- a/gwidgs/d3/d3begin.html
+++ b/gwidgs/d3/d3begin.html
@@ -16,5 +16,6 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/d3@7"></script> -->
     <script src="js/d3.v7.min.js"></script>
     <script src="page.js"></script>
+    <script src="flare-2.js"></script>
 </html> 
 
