--- a/gwidgs/d3/d3begin.html
+++ b/gwidgs/d3/d3begin.html
@@ -13,8 +13,8 @@
     <div id="container">Waiting on data...</div>
 </body>
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/d3@7"></script> -->
-    <script src="d3.v7.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+    <!-- <script src="d3.v7.min.js"></script> -->
     <script src="flare-2.js"></script>
     <script src="page.js"></script>
 </html> 
