--- a/gwidgs/figtree/index.html
+++ b/gwidgs/figtree/index.html
@@ -1,17 +1,16 @@
 <head>
     <link rel="stylesheet" href="index.css">
-
-    <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
+    <!-- <script src="https://docs.getgrist.com/grist-plugin-api.js"></script> -->
     <!-- <script src="d3.v7.min.js"></script> -->
-    <script src="flare-2.js"></script>
+    <!-- <script src="flare-2.js"></script> -->
     <!-- <script src="page.js"></script> -->
-    <script src="index.js"></script>
+    <script src="code.js"></script>
 
 </head>
 
 <body>
-    <div class="title">Example for
+    <!-- <div class="title">Example for
         <a href="https://github.com/davidfig/tree/">github.com/davidfig/tree/</a>
     </div>
-    <div id="tree">test...</div>
+    <div id="tree">test...</div> -->
 </body>
