--- a/gwidgs/figtree/index.html
+++ b/gwidgs/figtree/index.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="index.css">
+    <!-- <link rel="stylesheet" href="index.css"> -->
     <!-- <script src="https://docs.getgrist.com/grist-plugin-api.js"></script> -->
     <!-- <script src="d3.v7.min.js"></script> -->
     <!-- <script src="flare-2.js"></script> -->
