--- a/gwidgs/figtree/index.html
+++ b/gwidgs/figtree/index.html
@@ -4,7 +4,7 @@
     <!-- <script src="d3.v7.min.js"></script> -->
     <!-- <script src="flare-2.js"></script> -->
     <!-- <script src="page.js"></script> -->
-    <script src="code.js"></script>
+    <script type="module" src="code.js"></script>
 
 </head>
 
