--- a/gwidgs/figtree/index.html
+++ b/gwidgs/figtree/index.html
@@ -5,7 +5,8 @@
     <!-- <script src="flare-2.js"></script> -->
     <!-- <script src="page.js"></script> -->
     <script type="module" src="code.js"></script>
-
+    <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/eventemitter3/5.0.1/index.min.js"></script>
+    
 </head>
 
 <body>
