--- a/gwidgs/figtree/index.html
+++ b/gwidgs/figtree/index.html
@@ -1,11 +1,10 @@
 <head>
     <!-- <link rel="stylesheet" href="index.css"> -->
-    <!-- <script src="https://docs.getgrist.com/grist-plugin-api.js"></script> -->
-    <!-- <script src="d3.v7.min.js"></script> -->
-    <!-- <script src="flare-2.js"></script> -->
+    <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
+    <script src="flare-2.js"></script>
     <!-- <script src="page.js"></script> -->
     <script type="module" src="code.js"></script>
-    <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/eventemitter3/5.0.1/index.min.js"></script>
+    <!-- <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/eventemitter3/5.0.1/index.min.js"></script> -->
     
 </head>
 
