--- a/gwidgs/d3/treenav.html
+++ b/gwidgs/d3/treenav.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 </body>
-    <div id="main">Waiting on data...</div>
+    <div id="container">Waiting on data...</div>
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
     <script src="page.js"></script>
 </html> 
