script flare-2.js

--- a/gwidgs/d3/treenav.html
+++ b/gwidgs/d3/treenav.html
@@ -13,5 +13,6 @@
 </body>
     <div id="container">Waiting on data...</div>
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
+    <script src="flare-2.js"></script>
     <script src="page.js"></script>
 </html> 
