--- a/gwidgs/figtree/index.html
+++ b/gwidgs/figtree/index.html
@@ -1,16 +1,25 @@
-<head>
+<!DOCTYPE html>
+<html lang="en">
+
+    <head>
+        <meta charset="utf-8" />
+        <meta
+                name="viewport"
+                content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+        />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+        <title>treeNav</title>
+    </head>
+
+    <body>
+        <div id="container">Waiting on data...</div>
+    </body>
+
     <!-- <link rel="stylesheet" href="index.css"> -->
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
     <script src="flare-2.js"></script>
     <script type="module" src="page.js"></script>
     <!-- <script type="module" src="code.js"></script> -->
     <!-- <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/eventemitter3/5.0.1/index.min.js"></script> -->
-    
-</head>
 
-<body>
-    <!-- <div class="title">Example for
-        <a href="https://github.com/davidfig/tree/">github.com/davidfig/tree/</a>
-    </div>
-    <div id="tree">test...</div> -->
-</body>
+</html> 
