--- a/gwidgs/figtree/index.html
+++ b/gwidgs/figtree/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-    <head>
-        <meta charset="utf-8" />
-        <meta
-                name="viewport"
-                content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-        />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-        <title>treeNav</title>
-    </head>
-
-    <body>
-        <div id="container">Waiting on data...</div>
-    </body>
-
-    <!-- <link rel="stylesheet" href="index.css"> -->
+<head>
+    <meta charset="utf-8" />
+    <meta
+            name="viewport"
+            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <title>treeNav</title>
+</head>
+<body>
+    <div id="container">Waiting on data...</div>
+</body>
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+    <!-- <script src="d3.v7.min.js"></script> -->
     <script src="flare-2.js"></script>
-    <script type="module" src="page.js"></script>
-    <!-- <script type="module" src="code.js"></script> -->
-    <!-- <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/eventemitter3/5.0.1/index.min.js"></script> -->
-
+    <script src="page.js"></script>
 </html> 
+
