--- a/gwidgs/figtree/index.html
+++ b/gwidgs/figtree/index.html
@@ -17,5 +17,6 @@
     <!-- <script src="d3.v7.min.js"></script> -->
     <script src="flare-2.js"></script>
     <script src="page.js"></script>
+    <script type="module" src="code.js"></script>
 </html> 
 
