--- a/gwidgs/invoice1/index.html
+++ b/gwidgs/invoice1/index.html
@@ -113,13 +113,13 @@
           <template v-else>
             <tr>
               <th>Description</th>
-              <th class="money">Unit Price</th>
+              <!-- <th class="money">Unit Price</th> -->
               <th class="number">Quantity</th>
               <th class="money">Total</th>
             </tr>
             <tr v-for="item in invoice.Items">
               <td>{{ item.Description }}</td>
-              <td class="money">{{ item.Price | currency }}</td>
+              <!-- <td class="money"> item.Price | currency </td> -->
               <td class="number">{{ item.Quantity }}</td>
               <td class="money">{{ item.Total | currency }}</td>
             </tr>
