--- a/gwidgs/invoice1/index.html
+++ b/gwidgs/invoice1/index.html
@@ -181,7 +181,7 @@
 
         <div class="footer">
           <div class="thanks">
-            Thank you!
+            <!-- Thank you! -->
           </div>
         </div>
 
