--- a/gwidgs/invoice1/index.html
+++ b/gwidgs/invoice1/index.html
@@ -118,7 +118,7 @@
               <th class="money">Total</th>
             </tr>
             <tr v-for="item in invoice.Items">
-              <td>{{ item.Description }}</td>
+              <td claa="desc">{{ item.Description }}</td>
               <!-- <td class="money"> item.Price | currency </td> -->
               <td class="number">{{ item.Quantity }}</td>
               <td class="money">{{ item.Total | currency }}</td>
