Qty instead of Hours

--- a/gwidgs/invoice1/index.html
+++ b/gwidgs/invoice1/index.html
@@ -114,7 +114,7 @@
             <tr>
               <th>Description</th>
               <!-- <th class="money">Unit Price</th> -->
-              <th class="number">Hours</th>
+              <th class="number">Quantity</th>
               <th class="money">Total</th>
             </tr>
             <tr v-for="item in invoice.Items">
